<resources>
    <string name="app_name">care pet</string>
    <string name="care_pet">智能养宠</string>
    <string name="name">请输入用户名</string>
    <string name="pwd">请输入密码</string>
    <string name="pwd_again">请在此输入密码</string>
    <string name="btn_register">注册</string>
    <string name="login">登录</string>
    <string name="care">养宠</string>
    <string name="dynamic">动态</string>
    <string name="community">社区</string>
    <string name="me">我的</string>
    <string name="et_new_pwd_again">请再次输入新密码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>