<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_register"
        android:orientation="vertical"
        android:background="@color/white">

        <include layout="@layout/main_title_bar" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_icon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/et_user_name"
            android:singleLine="true"
            android:background="@drawable/register_psw"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:drawableLeft="@drawable/user_name_icon"
            android:paddingLeft="8dp"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textColorHint="#a3a3a3"
            android:textSize="14sp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_pwd"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/register_psw"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:drawableLeft="@drawable/psw_icon"
            android:paddingLeft="8dp"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:hint="@string/pwd"
            android:gravity="center_vertical"
            android:textColorHint="#a3a3a3"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_pwd_again"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/register_psw"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:drawableLeft="@drawable/psw_icon"
            android:paddingLeft="8dp"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:hint="@string/pwd_again"
            android:gravity="center_vertical"
            android:textColorHint="#a3a3a3"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:text="@string/btn_register"
            android:id="@+id/btn_register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/register_selector" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="请您保管好您的密码，谨防泄露"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </LinearLayout>
</layout>