<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/main_title_bar" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iv_head"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/default_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="登录智能养宠"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="让养宠更简单"
            android:textSize="22sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:id="@+id/et_user_name"
            android:paddingLeft="80dp"
            android:hint="@string/name"
            android:gravity="center_vertical"
            android:textColorHint="#a3a3a3"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="#666666" />

        <EditText
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/et_pwd"
            android:paddingLeft="80dp"
            android:hint="@string/pwd"
            android:gravity="center_vertical"
            android:textColorHint="#a3a3a3"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="#666666" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@drawable/register_selector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="立即注册"
                android:id="@+id/tv_register"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="找回密码？"
                android:id="@+id/tv_find_pwd"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_weight="1"
                android:gravity="center_horizontal" />


        </LinearLayout>


    </LinearLayout>
</layout>