<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/main_title_bar"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_body"
            android:background="@color/white">
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/main_bottom_bar"
        android:baselineAligned="true"
        android:layout_alignParentBottom="true"
        android:background="#F2F2F2"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/bottom_bar_care_btn"
            android:clickable="true"
            android:layout_weight="1">
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/bottom_bar_text_care"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:layout_marginBottom="3dp"-->
<!--                android:gravity="center"-->
<!--                android:singleLine="true"-->
<!--                android:text="@string/care"-->
<!--                android:textColor="#666666"-->
<!--                android:textSize="14sp"/>-->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/bottom_bar_image_care"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:src="@drawable/main_care_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/care"
                android:id="@+id/bottom_bar_tv_care"
                android:textSize="12sp"
                android:textColor="#a3a3a3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/bottom_bar_dynamic_btn"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic"
                android:id="@+id/bottom_bar_tv_dynamic"
                android:textSize="12sp"
                android:textColor="#a3a3a3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/bottom_bar_image_dynamic"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:src="@drawable/main_dynamic_icon"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bottom_bar_photo_btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:id="@+id/bottom_bar_tv_photo"
                android:textSize="12sp"
                android:textColor="#a3a3a3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/bottom_bar_image_photo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:src="@drawable/main_community_icon"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/bottom_bar_community_btn"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:id="@+id/bottom_bar_tv_community"
                android:textSize="12sp"
                android:textColor="#a3a3a3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/bottom_bar_image_community"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:src="@drawable/main_community_icon"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/bottom_bar_me_btn"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:id="@+id/bottom_bar_tv_me"
                android:textSize="12sp"
                android:textColor="#a3a3a3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/bottom_bar_image_me"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:src="@drawable/main_me_icon"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>